--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-rc.1",
+    "ajv": "^6.8.1",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.11.4",
-    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular-devkit/core": "~7.1.4",
     "@angular-devkit/schematics": "~7.1.4",
     "@angular/cli": "~7.1.4",
