--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "MXOrcamento",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Mxm Sistemas",
+  "homepage": "",
   "scripts": {
     "ng": "ng",
     "start": "ionic build --prod --engine=browser",
@@ -29,7 +29,8 @@
     "core-js": "^2.5.4",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "express": "~4.4.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.11.4",
