--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "MXOrcamento",
   "version": "0.0.1",
-  "author": "Mxm Sistemas",
-  "homepage": "",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ionic build --prod --engine=browser",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -27,10 +27,10 @@
     "ajv": "^6.8.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
-    "express": "~4.4.3"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.11.4",
