Mudando configurações de build

--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "homepage": "http://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
+    "postinstall": "ng build --aot --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~7.1.4",
     "@angular/common": "~7.1.4",
+    "@angular/compiler": "~7.1.4",
+    "@angular/compiler-cli": "~7.1.4",
     "@angular/core": "~7.1.4",
     "@angular/forms": "~7.1.4",
     "@angular/http": "~7.1.4",
