--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
-    "postinstall": "ng build --aot --prod",
+    "postinstall": "Ionic build browser --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
