--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "homepage": "http://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "postinstall": "ng b --prod",
+    "start": "ng serve.js",
+    "build": "ng build --prod",
+    "start-public": "ng serve --host 0.0.0.0 --port 4300 --disable-hc",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~7.1.4",
     "@angular/common": "~7.1.4",
+    "@angular/compiler": "~7.1.4",
+    "@angular/compiler-cli": "~7.1.4",
     "@angular/core": "~7.1.4",
     "@angular/forms": "~7.1.4",
     "@angular/http": "~7.1.4",
@@ -30,6 +35,7 @@
     "express": "^4.16.4",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
+    "typescript": "~3.1.6",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -57,6 +63,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
+  },
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.4.1"
   },
   "description": "An Ionic project"
 }
