REalizando correções para a publicação no heroku.

--- a/angular.json
+++ b/angular.json
@@ -20,11 +20,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "src/assets",
-                "output": "assets"
-              },
+                { "glob": "**/*", "input": "src/assets/", "output": "/assets/" },
+                { "glob": "favicon.ico", "input": "src/", "output": "/" },
               {
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
